force-app/main/default/objects/Interviewer__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <formula>TEXT(Interview__r.Interview_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Type</label>
    <type>Text</type>
</CustomField>