force-app/main/default/objects/Interviewer__c/fields/Position_Name__c.field-meta.xml
<CustomField>
    <fullName>Position_Name__c</fullName>
    <formula>Interview__r.Candidate__r.Position__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Name</label>
    <type>Text</type>
</CustomField>